# Python-tools

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  bat.py  clip.py  cron.py  flasky.py  pyproject.toml  webfolder.py  wifi.py
.github/workflows/: ci.yml
src/: clip.py
templates/: file_list.html  file_view.html
