[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "flask>=3.1.1",
    "keyboard>=0.13.5",
    "psutil>=7.0.0",
    "pyperclip>=1.9.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = [
    "/build/",
    "/dist/",
    "/.git/",
    "/.venv/",
    "/venv/",
    "/.mypy_cache/",
    "/.pytest_cache/",
]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]
extend-exclude = ["build", "dist", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["build", "dist", "venv", ".venv"]
